--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "autoload": {
     "psr-4": {
       "App\\" : "app/",
-      "Jobs\\": "app/Jobs"
+      "Jobs\\": "app/Jobs",
+      "Crisis\\": "app/Anti-CrisisMeasures"
     }
   }
 }
