--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
       "email": "email@example.com"
     }
   ],
-  "require": {
-  },
   "autoload": {
     "psr-4": {
       "App\\" : "app/",
       "Jobs\\": "app/Jobs",
       "Crisis\\": "app/Anti-CrisisMeasures"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
   }
 }
